# mxgenius.io

./: .gitignore  CHANGELOG.md  OSS-NOTICES.md  app-styles.css  app.js  application-client.js  auth.js  cache.js  capability-workbench.js  case-workspace.css  case-workspace.js  chat.html  dashboard.html  globe-vr.html  index.html  login.html  onboarding.css  onboarding.js  package.json  probe_deep.js  probe_jetnet.js  production-ui.css  realtime-client.js  realtime.css  runtime-config.js  training-ground.html  trust-center.html  waitlist.html  xr-realtime-presence.js
.agents/: AGENTS.md
.azure/: deployment-plan.md
.github/workflows/: deploy.yml
3d-viewer/: index.html  models.json  xr-animation-scrubber.js  xr-control.html  xr-media-panel.js
3d-viewer/lib/webxr/: VRButton.js
docs/: AUTHORITATIVE_CORPUS_MOUNT.md  AVIATION_DEMO_FIELD_GUIDE.html  AVIATION_DEMO_FIELD_GUIDE.md  ENTRA_DASHBOARD_AUTH.md  PRE_MCP_SURFACE_INVENTORY.md  PRODUCTION_MOUNT_TASKLIST.md  REALTIME_WEBRTC_MOUNT.md  THREE_D_OPERATIONAL_SLICE.md  UI_RECONCILIATION.md
services/fleet-proxy/: .dockerignore  Dockerfile  server.js
services/manual-retrieval/: Dockerfile  README.md  app.py  requirements.txt  test_app.py
services/mcp/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
services/mcp/docs/: MOUNT_READINESS.md  contract-decisions.md  integration-guide.md  known-not-configured.md
services/mcp/fixtures/: README.md
services/mcp/fixtures/digital_twin/: models.json
services/mcp/fixtures/faa/: ads.json
services/mcp/fixtures/jetnet/: aircraft.json  profile.json
services/mcp/fixtures/manual_corpus/: catalog.json  excerpts.json
services/mcp/migrations/: 0001_organizations_and_memberships.sql  0002_aircraft_canonical.sql  0003_maintenance_cases.sql  0004_maintenance_events_and_observations.sql  0005_components_and_documents.sql  0006_compliance.sql  0007_parts.sql  0008_mro_and_scheduling.sql  0009_evidence_approvals_audit.sql  0010_confirmation_grants.sql  0011_digital_twin_markers.sql  README.md
services/mcp/scripts/: ingest_minilm_manual_corpus.py  migrate_authoritative_manual_index.ps1  promote_manual_asset_availability.ps1  restore_legacy_manual_assets.ps1
services/mcp/server/: Cargo.toml
services/mcp/server/examples/: faa_drs_smoke.rs  manual_search_smoke.rs
services/mcp/server/src/: confirmation.rs  context.rs  dispatcher.rs  error.rs  lib.rs  main.rs  policy.rs  prompts.rs  registry.rs  resources.rs  telemetry.rs  tool.rs  transport.rs  typed_tool.rs
services/mcp/server/src/adapters/: aircraft.rs  faa.rs  manual.rs  mod.rs
services/mcp/server/src/application/: aircraft_catalog.rs  case_service.rs  evidence_service.rs  mod.rs  policy_enforce.rs  postgres_case_service.rs
services/mcp/server/src/handlers/: aircraft.rs  analytics.rs  case.rs  compliance.rs  digital_twin.rs  evidence.rs  mod.rs  mro.rs  parts.rs  scheduling.rs  weather.rs
services/mcp/server/src/transport/: http.rs  stdio.rs
services/mcp/server/tests/: registry.rs
services/mcp/shared/: Cargo.toml
services/mcp/shared/src/: lib.rs
services/mcp/shared/src/adapters/: digital_twin.rs  faa.rs  facility.rs  jetnet.rs  manual.rs  mod.rs  parts.rs  repository.rs  scheduling.rs  source.rs  weather.rs
services/mcp/shared/src/application/: context.rs  envelope.rs  errors.rs  mod.rs  policy.rs
services/mcp/shared/src/contracts/: aircraft.rs  analytics.rs  case.rs  common.rs  compliance.rs  digital_twin.rs  evidence.rs  mod.rs  mro.rs  parts.rs  scheduling.rs  weather.rs
services/mcp/shared/src/domain/: case.rs  case_transition_test.rs  compliance.rs  datetime.rs  digital_twin.rs  document.rs  evidence.rs  facility.rs  ids.rs  mod.rs  organization.rs  part.rs  scheduling.rs
services/mcp/shared/src/schemas/: mod.rs
tests/: application-client.test.mjs  live-smoke.test.mjs  maintenance-advisory.test.mjs  realtime-client.test.mjs  structure.test.mjs  xr-realtime-presence.test.mjs
