[workspace]
resolver = "2"
members = [
    "server",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Proprietary"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUIDs and time
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
time = { version = "0.3", features = ["serde-well-known", "macros", "formatting"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP server (for Streamable HTTP transport)
axum = { version = "0.7", features = ["http1", "json", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
jsonwebtoken = { version = "9", default-features = false }

# Database (optional; needed for full Postgres impl)
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "json",
    "macros",
    "migrate",
] }

# JSON Schema generation
schemars = { version = "0.8", features = ["uuid1", "chrono"] }

# Regex
regex = "1"

# Concurrent collections
parking_lot = "0.12"

# Configuration
once_cell = "1"

# MCP SDK primitives (we implement wire protocol directly per the
# contract; this is kept for helper utilities and types).
# Note: no external MCP SDK lock-in — we own the protocol surface.

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
