[package]
name = "mxgenius-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "MXGenius MCP server: Streamable HTTP + stdio over shared application services."

[[bin]]
name = "mxgenius-mcp"
path = "src/main.rs"

[dependencies]
mxgenius-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
